# signal_generators

./: CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
.rag/: _RAG.md
.rag/arch/: C2_container.md  C3_component.md  C4_code.md
.rag/meta/: build_targets.md  claude_card.md  cmake_summary.md
.rag/test_params/: dsp_signal_generators_CwGenerator.md  dsp_signal_generators_CwGeneratorROCm.md  dsp_signal_generators_DelayedFormSignalGenerator.md  dsp_signal_generators_DelayedFormSignalGeneratorROCm.md  dsp_signal_generators_FormScriptGenerator.md  dsp_signal_generators_FormScriptGeneratorROCm.md  dsp_signal_generators_FormSignalGenerator.md  dsp_signal_generators_FormSignalGeneratorROCm.md  dsp_signal_generators_LfmConjugateGenerator.md  dsp_signal_generators_LfmConjugateGeneratorROCm.md  dsp_signal_generators_LfmGenerator.md  dsp_signal_generators_LfmGeneratorAnalyticalDelay.md  dsp_signal_generators_LfmGeneratorAnalyticalDelayROCm.md  dsp_signal_generators_LfmGeneratorROCm.md  dsp_signal_generators_NoiseGenerator.md  dsp_signal_generators_NoiseGeneratorROCm.md  dsp_signal_generators_ScriptGenerator.md  dsp_signal_generators_ScriptGeneratorROCm.md  signal_gen_CwGenerator.md  signal_gen_CwGeneratorROCm.md  signal_gen_DelayedFormSignalGenerator.md  signal_gen_DelayedFormSignalGeneratorROCm.md  signal_gen_FormScriptGenerator.md  signal_gen_FormScriptGeneratorROCm.md  signal_gen_FormSignalGenerator.md  signal_gen_FormSignalGeneratorROCm.md  signal_gen_LfmConjugateGenerator.md  signal_gen_LfmConjugateGeneratorROCm.md  signal_gen_LfmGenerator.md  signal_gen_LfmGeneratorAnalyticalDelay.md  signal_gen_LfmGeneratorAnalyticalDelayROCm.md  signal_gen_LfmGeneratorROCm.md  signal_gen_NoiseGenerator.md  signal_gen_NoiseGeneratorROCm.md  signal_gen_ScriptGenerator.md  signal_gen_ScriptGeneratorROCm.md
.rag/use_cases/: form_signal_rocm.md  scriptgenerator_fftprocessor.md  signal_generators_benchmark_rocm.md  signal_generators_rocm_basic.md
Doc/: API.md  Architecture.md  Full.md  Patterns.md  Quick.md  README.md  ScriptGenerator.md
cmake/: DspSignalGeneratorsConfig.cmake.in  version.cmake
include/dsp/signal_generators/: i_signal_generator.hpp  prof_utils.hpp  signal_generator_factory.hpp  signal_service.hpp
include/dsp/signal_generators/generators/: cw_generator.hpp  cw_generator_rocm.hpp  delayed_form_signal_generator.hpp  delayed_form_signal_generator_rocm.hpp  form_script_generator.hpp  form_script_generator_rocm.hpp  form_signal_generator.hpp  form_signal_generator_rocm.hpp  lfm_conjugate_generator.hpp  lfm_conjugate_generator_rocm.hpp  lfm_generator.hpp  lfm_generator_analytical_delay.hpp  lfm_generator_analytical_delay_rocm.hpp  lfm_generator_rocm.hpp  noise_generator.hpp  noise_generator_rocm.hpp  script_generator.hpp  script_generator_rocm.hpp
include/dsp/signal_generators/kernels/: cw_kernels_rocm.hpp  form_signal_kernels_rocm.hpp  lfm_kernels_rocm.hpp  noise_kernels_rocm.hpp
include/dsp/signal_generators/params/: form_params.hpp  signal_request.hpp  system_sampling.hpp
include/signal_generators/: i_signal_generator.hpp  prof_utils.hpp  signal_generator_factory.hpp  signal_service.hpp
include/signal_generators/generators/: cw_generator.hpp  cw_generator_rocm.hpp  delayed_form_signal_generator.hpp  delayed_form_signal_generator_rocm.hpp  form_script_generator.hpp  form_script_generator_rocm.hpp  form_signal_generator.hpp  form_signal_generator_rocm.hpp  lfm_conjugate_generator.hpp  lfm_conjugate_generator_rocm.hpp  lfm_generator.hpp  lfm_generator_analytical_delay.hpp  lfm_generator_analytical_delay_rocm.hpp  lfm_generator_rocm.hpp  noise_generator.hpp  noise_generator_rocm.hpp  script_generator.hpp  script_generator_rocm.hpp
include/signal_generators/kernels/: cw_kernels_rocm.hpp  form_signal_kernels_rocm.hpp  lfm_kernels_rocm.hpp  noise_kernels_rocm.hpp
include/signal_generators/params/: form_params.hpp  signal_request.hpp  system_sampling.hpp
modules/signal_generators/kernels/gfx1201/: manifest.json
python/: CMakeLists.txt  dsp_signal_generators_module.cpp  py_delayed_form_signal_rocm.hpp  py_form_signal_rocm.hpp  py_lfm_analytical_delay.hpp  py_lfm_analytical_delay_rocm.hpp
src/signal_generators/: CMakeLists.txt  cw_generator_rocm.cpp  delayed_form_signal_generator_rocm.cpp  form_script_generator_rocm.cpp  form_signal_generator_rocm.cpp  lfm_conjugate_generator_rocm.cpp  lfm_generator_analytical_delay_rocm.cpp  lfm_generator_rocm.cpp  noise_generator_rocm.cpp  script_generator_rocm.cpp  signal_generator_factory.cpp
src/signal_generators/include/: signal_generator_factory.hpp  signal_service.hpp
src/signal_generators/include/generators/: cw_generator.hpp  cw_generator_rocm.hpp  form_script_generator.hpp  form_script_generator_rocm.hpp  form_signal_generator.hpp  lfm_conjugate_generator_rocm.hpp  lfm_generator_analytical_delay_rocm.hpp  lfm_generator_rocm.hpp  noise_generator_rocm.hpp
src/signal_generators/include/kernels/: noise_kernels_rocm.hpp
src/signal_generators/include/params/: signal_request.hpp  system_sampling.hpp
src/signal_generators/kernels/: CwGen_kernels.cl  LfmDelay_kernels.cl  NoiseGen_kernels.cl  README.md  manifest.json
src/signal_generators/kernels/rocm/: form_signal.hip
src/signal_generators/src/: cw_generator_rocm.cpp  delayed_form_signal_generator_rocm.cpp  form_script_generator_rocm.cpp  form_signal_generator_rocm.cpp  lfm_conjugate_generator_rocm.cpp  lfm_generator_analytical_delay_rocm.cpp  lfm_generator_rocm.cpp  noise_generator_rocm.cpp  script_generator_rocm.cpp  signal_generator_factory.cpp
src/signal_generators/tests/: README.md  all_test.hpp  signal_generators_benchmark_rocm.hpp  test_signal_generators_benchmark_rocm.hpp  test_signal_generators_rocm_basic.hpp
tests/: CMakeLists.txt  all_test.hpp  main.cpp  signal_generators_benchmark_rocm.hpp  test_form_signal_rocm.hpp  test_signal_generators_benchmark_rocm.hpp  test_signal_generators_rocm_basic.hpp
