# ── DspSignalGenerators tests ──────────────────────────────────────
add_executable(test_signal_generators_main main.cpp)
target_link_libraries(test_signal_generators_main PRIVATE
  DspSignalGenerators::DspSignalGenerators DspCore::TestUtils)
target_include_directories(test_signal_generators_main PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
target_compile_definitions(test_signal_generators_main PRIVATE
  $<$<BOOL:${ENABLE_ROCM}>:ENABLE_ROCM=1>)
